--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,34 @@
+version: "3.9"
 
 services:
-  db:
-    image: postgres
-    env_file:
-      - .env
-
   web:
     build: .
-    command: >
-      bash -c "
-        python manage.py migrate &&
-        python manage.py runserver 0.0.0.0:8000
-      "
+    command: sh -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8001"
     volumes:
       - .:/app
     ports:
-      - "8001:8000"
+      - "8001:8001"  # 🔥 8001 port ochildi
     depends_on:
       - db
-    env_file:
-      - .env
+    environment:
+      - DEBUG=1
+      - DB_NAME=master_find
+      - DB_USER=postgres
+      - DB_PASSWORD=ozodbek2006
+      - DB_HOST=db
+      - DB_PORT=5432
+
+  db:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_DB: master_find
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: ozodbek2006
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
+volumes:
+  postgres_data:
